# clinic-ops-copilot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  QUICKSTART.md
evals/golden/: README.md  cases.json
plugins/: README.md  _prior_auth_example.py
scripts/: init.sql  seed.py
src/clinic_ops_copilot/: __init__.py  config.py
src/clinic_ops_copilot/agents/: base.py  eligibility.py  onboarding.py  registry.py  scheduler.py  triage.py
src/clinic_ops_copilot/api/: main.py
src/clinic_ops_copilot/cli/: main.py
src/clinic_ops_copilot/eval/: runner.py
src/clinic_ops_copilot/observability/: dashboard.py  tracing.py
src/clinic_ops_copilot/storage/: database.py  events.py  queries.py
src/clinic_ops_copilot/tools/: eligibility_tools.py  onboarding_tools.py  scheduler_tools.py  triage_tools.py
tests/unit/: test_smoke.py
